Handling API authentication via headers added API to create new account
